--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "lodash": "^4.16.1",
     "react": "^15.3.1",
     "react-dom": "^15.3.1",
+    "react-redux": "^4.4.5",
     "redux": "^3.6.0"
   },
   "devDependencies": {
